--- a/OnedaycartMaven/test-output/emailable-report.html
+++ b/OnedaycartMaven/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">78,612</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">85,271</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.oneDayCart.testScript.ShoppingCartTest</td><td><a href="#m0">shoppingcartTest</a></td><td rowspan="1">1592841905397</td><td rowspan="1">8289</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.oneDayCart.testScript.AddressBookTest</td><td><a href="#m0">addressBookTest</a></td><td rowspan="1">1592883094038</td><td rowspan="1">19301</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.oneDayCart.testScript.ShoppingCartTest#shoppingcartTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.oneDayCart.testScript.AddressBookTest#addressBookTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th></tr><tr class="param stripe"><td>997287893</td><td>8310342658</td><td>KEB</td><td>lane</td><td>Munnar</td><td>682001</td><td>church</td></tr><tr><th colspan="7">Messages</th></tr><tr><td colspan="7"><div class="messages">click on my account<br/>click on address book<br/>click on add new address button<br/>enter mobile number<br/>enter land phone number<br/>enter street1 address<br/>enter street2 address<br/>enter city<br/>enter postal code<br/>enter land mark<br/>select state<br/>select country</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
