--- a/OnedaycartMaven/test-output/index.html
+++ b/OnedaycartMaven/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--1406375269\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--774510903\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.oneDayCart.testScript.ShoppingCartTest" hash-for-method="shoppingcartTest">shoppingcartTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.oneDayCart.testScript.AddressBookTest" hash-for-method="addressBookTest(997287893, 8310342658, KEB, lane, Munnar, 682001, church)">addressBookTest(997287893, 8310342658, KEB, lane, Munnar, 682001, church)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.oneDayCart.testScript.ShoppingCartTest</span>
+              <span class="class-name">com.oneDayCart.testScript.AddressBookTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="shoppingcartTest">
-                  </a> <!-- shoppingcartTest -->
-                  <span class="method-name">shoppingcartTest</span>
+                  <a name="addressBookTest(997287893, 8310342658, KEB, lane, Munnar, 682001, church)">
+                  </a> <!-- addressBookTest(997287893, 8310342658, KEB, lane, Munnar, 682001, church) -->
+                  <span class="method-name">addressBookTest</span>
+                  <span class="parameters">(997287893, 8310342658, KEB, lane, Munnar, 682001, church)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--1406375269\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--774510903\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +145,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.oneDayCart.testScript.ShoppingCartTest&quot;/&gt;
+      &lt;class name=&quot;com.oneDayCart.testScript.AddressBookTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'shoppingcartTest')
-data.setCell(0, 2, 'com.oneDayCart.testScript.ShoppingCartTest')
-data.setCell(0, 3, 8289);
+data.setCell(0, 1, 'addressBookTest')
+data.setCell(0, 2, 'com.oneDayCart.testScript.AddressBookTest')
+data.setCell(0, 3, 19301);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -204,6 +205,23 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">addressBookTest(997287893, 8310342658, KEB, lane, Munnar, 682001, church)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">click on my account</span>
+                <span class="reporter-method-output">click on address book</span>
+                <span class="reporter-method-output">click on add new address button</span>
+                <span class="reporter-method-output">enter mobile number</span>
+                <span class="reporter-method-output">enter land phone number</span>
+                <span class="reporter-method-output">enter street1 address</span>
+                <span class="reporter-method-output">enter street2 address</span>
+                <span class="reporter-method-output">enter city</span>
+                <span class="reporter-method-output">enter postal code</span>
+                <span class="reporter-method-output">enter land mark</span>
+                <span class="reporter-method-output">select state</span>
+                <span class="reporter-method-output">select country</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -219,26 +237,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.oneDayCart.testScript.ShoppingCartTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.oneDayCart.testScript.AddressBookTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">configBC</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">configBM</span>
-                <span class="method-start">38845 ms</span>
+                <span class="method-start">37554 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">shoppingcartTest</span>
-                <span class="method-start">63457 ms</span>
+                <span class="method-name">addressBookTest(997287893, 8310342658, KEB, lane, Munnar, 682001, church)</span>
+                <span class="method-start">55931 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">configAM</span>
-                <span class="method-start">71761 ms</span>
+                <span class="method-start">75253 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">configAC</span>
-                <span class="method-start">75829 ms</span>
+                <span class="method-start">79970 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
