--- a/OnedaycartMaven/test-output/old/Default suite/methods.html
+++ b/OnedaycartMaven/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="999395">  <td>20/06/23 09:00:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBC()[pri:0, instance:com.oneDayCart.testScript.AddressBookTest@1f7030a6]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>20/06/23 09:01:15</td>   <td>37538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBM()[pri:0, instance:com.oneDayCart.testScript.AddressBookTest@1f7030a6]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="7567f1">  <td>20/06/23 09:01:34</td>   <td>55915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddressBookTest.addressBookTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.oneDayCart.testScript.AddressBookTest@1f7030a6]">addressBookTest</td> 
-  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>20/06/23 09:01:53</td>   <td>75238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAM()[pri:0, instance:com.oneDayCart.testScript.AddressBookTest@1f7030a6]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="999395">  <td>20/06/23 09:01:58</td>   <td>79955</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAC()[pri:0, instance:com.oneDayCart.testScript.AddressBookTest@1f7030a6]">&lt;&lt;configAC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>20/06/27 12:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBC()[pri:0, instance:com.oneDayCart.testScript.WishListTest@2d6eabae]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@317986356</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>20/06/27 12:35:15</td>   <td>72767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBM()[pri:0, instance:com.oneDayCart.testScript.WishListTest@2d6eabae]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>main@317986356</td>   <td></td> </tr>
+<tr bgcolor="7567f1">  <td>20/06/27 12:35:47</td>   <td>104794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishListTest.moveItemToWishlistTest()[pri:0, instance:com.oneDayCart.testScript.WishListTest@2d6eabae]">moveItemToWishlistTest</td> 
+  <td>main@317986356</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>20/06/27 12:36:14</td>   <td>131809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAM()[pri:0, instance:com.oneDayCart.testScript.WishListTest@2d6eabae]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>main@317986356</td>   <td></td> </tr>
+<tr bgcolor="999395">  <td>20/06/27 12:36:21</td>   <td>138745</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAC()[pri:0, instance:com.oneDayCart.testScript.WishListTest@2d6eabae]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@317986356</td>   <td></td> </tr>
 </table>
