--- a/OnedaycartMaven/test-output/old/Default suite/reporter-output.html
+++ b/OnedaycartMaven/test-output/old/Default suite/reporter-output.html
@@ -2,18 +2,8 @@
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
-<tr><td>click on my account</td></tr>
-<tr><td>click on address book</td></tr>
-<tr><td>click on add new address button</td></tr>
-<tr><td>enter mobile number</td></tr>
-<tr><td>enter land phone number</td></tr>
-<tr><td>enter street1 address</td></tr>
-<tr><td>enter street2 address</td></tr>
-<tr><td>enter city</td></tr>
-<tr><td>enter postal code</td></tr>
-<tr><td>enter land mark</td></tr>
-<tr><td>select state</td></tr>
-<tr><td>select country</td></tr>
+<tr><td>entering the productRice</td></tr>
+<tr><td>move items to wishlist</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 </table>
