--- a/OnedaycartMaven/test-output/old/Suite/reporter-output.html
+++ b/OnedaycartMaven/test-output/old/Suite/reporter-output.html
@@ -2,8 +2,16 @@
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
-<tr><td>click on blend oil</td></tr>
-<tr><td>compared the name</td></tr>
+<tr><td>mouse over to HOUSEHOLD and click on shoebrush</td></tr>
+<tr><td>click on add to cart button</td></tr>
+<tr><td>mouse over to HOUSEHOLD and click on shoepolish</td></tr>
+<tr><td>click on add to cart button</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
@@ -24,100 +32,7 @@
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
 <tr><td>entering the productRice products</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
-<tr><td>click on add to cart</td></tr>
+<tr><td>click on add cart button</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
@@ -130,30 +45,29 @@
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
+<tr><td>click on jaggery</td></tr>
+<tr><td>click on add to cart button</td></tr>
+<tr><td>click on my cart</td></tr>
+<tr><td>click on continue shopping</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
-<tr><td>move items to wishlist</td></tr>
+<tr><td>entering the productPONNI RICE (LOOSE)</td></tr>
+<tr><td>search product</td></tr>
+<tr><td>click on add to cart button</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
-<tr><td>click on share wish list button</td></tr>
-<tr><td>enter emails</td></tr>
-<tr><td>enter message</td></tr>
-<tr><td>click on share wishlist</td></tr>
-<tr><td>click on logOut Link</td></tr>
-<tr><td>browser closed</td></tr>
-<tr><td>Browser is launched</td></tr>
-<tr><td>enter url</td></tr>
-<tr><td>click on logIn link</td></tr>
-<tr><td>enter email and password</td></tr>
-<tr><td>click on add all to cart button</td></tr>
+<tr><td>click on my account</td></tr>
+<tr><td>click on newsletter subscription</td></tr>
+<tr><td>click on checkbox</td></tr>
+<tr><td>click on save button</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
@@ -175,13 +89,69 @@
 <tr><td>Browser is launched</td></tr>
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>click on my account</td></tr>
+<tr><td>click on address book</td></tr>
+<tr><td>click on add new address button</td></tr>
+<tr><td>enter mobile number</td></tr>
+<tr><td>enter land phone number</td></tr>
+<tr><td>enter street1 address</td></tr>
+<tr><td>enter street2 address</td></tr>
+<tr><td>enter city</td></tr>
+<tr><td>enter postal code</td></tr>
+<tr><td>enter land mark</td></tr>
+<tr><td>select state</td></tr>
+<tr><td>select country</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>click on my wallet cash</td></tr>
+<tr><td>my wallet page is opened</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>click on my account</td></tr>
+<tr><td>click on billing agreement</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>click on shopping cart</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
 <tr><td>enter email and password</td></tr>
 <tr><td>move items to wishlist</td></tr>
-<tr><td>click on remove item</td></tr>
-<tr><td>Handling alert</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>move items to wishlist</td></tr>
+<tr><td>click on logOut Link</td></tr>
+<tr><td>browser closed</td></tr>
+<tr><td>Browser is launched</td></tr>
+<tr><td>enter url</td></tr>
+<tr><td>click on logIn link</td></tr>
+<tr><td>enter email and password</td></tr>
+<tr><td>click on add all to cart button</td></tr>
 <tr><td>click on logOut Link</td></tr>
 <tr><td>browser closed</td></tr>
 <tr><td>Browser is launched</td></tr>
@@ -194,8 +164,4 @@
 <tr><td>Browser is launched</td></tr>
 <tr><td>enter url</td></tr>
 <tr><td>click on logIn link</td></tr>
-<tr><td>enter email and password</td></tr>
-<tr><td>cleared cart items</td></tr>
-<tr><td>click on logOut Link</td></tr>
-<tr><td>browser closed</td></tr>
 </table>
