--- a/OnedaycartMaven/test-output/old/Default suite/classes.html
+++ b/OnedaycartMaven/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.oneDayCart.testScript.AddressBookTest</td>
+<td>com.oneDayCart.testScript.WishListTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addressBookTest</td>
+<td>moveItemToWishlistTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
